--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -6,6 +6,14 @@ dependencies:
   convert: ^2.1.1
   conflux_codec:
     path: ../
+  eth_abi_codec:
+    git:
+     url: https://github.com/nbltrust/dart-eth-abi-codec
+     ref: '0.2.0'
+  ethereum_codec:
+    git:
+      url: https://github.com/nbltrust/dart-eth-transaction-codec.git
+      ref: 0.2.2
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
